# simpleSDL

./: .gitignore  CMakeLists.txt  README.md
contrib/: .gitignore  readme.txt  update-emsdk.bat
data/: shaderFragment.glsl  shaderFragmentLight.glsl  shaderVertex.glsl  shaderVertexText.glsl  text2d-widths.txt
data/models/craneo/: craneo.model
data/models/cube/: cube.model  cubeMap.model
data/models/cube2/: cube.model
data/models/cylinder/: cylinder.model
data/models/moses/: source.txt
data/models/nanosuit/: nanosuit.model
data/models/rubix/: RubixCube.model
data/models/salazar/: scene.model  source.txt
data/models/skull/: source.txt
data/models/xenoraven/: source.txt
data/shaders/: fragColorMapDirectional.glsl  fragColorMapSpotMultiple.glsl  fragColorMapSpotNew.glsl  fragDepthDebug.glsl  fragDepthMap.glsl  fragDiffDir.glsl  fragDiffPos.glsl  fragDiffPosShadow.glsl  fragDiffPosShadowPos.glsl  fragDiffPosShadowPositional.glsl  fragDiffPosShadowSpot.glsl  fragDiffSpec.glsl  fragDiffSpecNormMulti.glsl  fragDiffSpecNormSpot.glsl  fragDiffSpecPoint.glsl  fragDiffuse.glg  fragDiffuseLight.glsl  fragDiffuseLightSpec.glsl  fragDiffuseLightSpecColor.glsl  fragDiffuseLightSpecMapNorm.glsl  fragDiffuseLightSpecNorm.glsl  fragMin.glsl  fragPostGrayscale.glsl  fragPostInvert.glsl  fragPostKernel.glsl  fragPostNoChange.glsl  fragSkybox.glsl  fragSkyboxReflection.glsl  fragSkyboxRefraction.glsl  fragText.glsl  vertColor.glsl  vertColorMap.glsl  vertDepthMap.glsl  vertDiffuse.glsl  vertDiffuseLight.glsl  vertDiffuseLightSpecColor.glsl  vertDiffuseLightSpecNorm.glsl  vertLight.glsl  vertMin.glsl  vertNormal.glsl  (+6 more)
data/shaders/legacy/: Fragment.glsl
data/shaders/material/: fragColor.glsl  fragColorMapSpot.glsl  fragColorMapSpotMultipleNormalTangent.glsl  vertColorMap.glsl  vertColorMapNewNormal.glsl
data/shaders/zaloha/: fragDiffuseLightSpecNorm.glsl  vertDiffuseLightSpecNorm.glsl
modelConvert/: CMakeLists.txt  convert.cmd  windows_generate.cmd
modelConvert/data/: cube2.json  cube2.model
modelConvert/include/: model_generated.h
modelConvert/schema/: fromJson.cmd  generateModel.cmd  model.fbs  toJson.cmd
modelConvert/source/: ModelChecker.cpp  ModelChecker.h  ModelLoader.cpp  ModelLoader.h  main.cpp
source/: Application.cpp  Application.h  ApplicationMain.cpp  ApplicationMain.h  Bullet.cpp  Bullet.h  BulletDebug.cpp  BulletDebug.h  Camera.cpp  Camera.h  Common.cpp  Common.h  Cylinder.h  DebugDraw.cpp  DebugDraw.h  Editor.cpp  Editor.h  EditorDebug.cpp  EditorDebug.h  EventDispatchers.cpp  EventDispatchers.h  Framebuffer.cpp  Framebuffer.h  Generator.cpp  Generator.h  Gizmo.cpp  Gizmo.h  GizmoDraw.h  Light.h  LightObject.h  Model.cpp  Model.h  ModelLoader.cpp  ModelShader.cpp  ModelShader.h  MouseDispatcher.cpp  MouseDispatcher.h  ObjLoader.cpp  ObjLoader.h  ObjModel.h  (+28 more)
source/editor/: Editor.cpp  Editor.h  EditorDebug.cpp  EditorDebug.h  Generator.cpp  Generator.h  Gizmo.cpp  Gizmo.h  GizmoDraw.cpp  GizmoDraw.h  UserInterface.cpp  UserInterface.h
source/imgui/: imgui_impl_gles2.cpp  imgui_impl_gles2.h
source/legacy/: LightObject.h  ObjModel.h  ShadowScene.cpp  ShadowScene.h  Text2D.cpp  Text2D.h
source/model/: Model.cpp  Model.h  ModelShader.cpp  ModelShader.h  ShaderGenerator.cpp  Shadow.cpp  Shadow.h  TextureManager.cpp  TextureManager.h
source/scene/: Bullet.h  BulletDebug.cpp  BulletDebug.h  Scene.cpp  Scene.h
source/utils/: Camera.cpp  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Skybox.h  Texture.h
sourceCommon/: CommonProject.cpp  CommonProject.h  TangentSpace.cpp  TangentSpace.h  VboIndexer.cpp  VboIndexer.h
sourceLegacy/: DebugDraw.cpp  DebugDraw.h  ModelDebug.cpp  ModelDebug.h
tests/earthMoon/: CMakeLists.txt  windows_generate.cmd
tests/earthMoon/sources/: ApplicationEarthMoon.cpp  ApplicationEarthMoon.h  main.cpp
